<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Contact" >

    <EditText
        android:id="@+id/txt_objet_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hint_message"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/txt_message_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_num_message"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btn_envoyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bouton_envoyer"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>